# PlovdivGameJam2022

./: Cargo.toml  Dockerfile-mavsdk-server  README.md  docker-compose.yml
.cargo/: config.toml
assets/: gizmo_material.wgsl
assets/models/: drone.gltf
drafts/: cargo1.toml  drone.rs  main.rs  simple1.rs  simple_ok.rs  simple_orbit_with_picking1.rs
dummy/: 2021-10-24 20:51:18.910675477 UTC-position.json  2021-10-24 20:51:18.910675477 UTC-quaternions.json
src/: lib.rs  main.rs
src/plugins/: drone.rs  dummy.rs  mavsdk.rs
