[package]
name = "drone-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.6", features = ["dynamic"] }

# Use branch for bevy = 0.6
bevy_transform_gizmo = { git = "https://github.com/elpiel/bevy_transform_gizmo", branch = "fix-bevy-0.6" }

# For bevy = 0.6
bevy_mod_picking = "0.5"