[package]
name = "drone-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bevy 0.6s
bevy = { version = "0.6", features = ["dynamic"] }

# For bevy = 0.6
bevy_transform_gizmo = "0.1"

# For bevy = 0.6
bevy_mod_picking = "0.5"

# Logging
log = "0.4"
